# kaya

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  DESIGN.md  README.md  dune  dune-project  flake.nix  go.mod
.cargo/: config.toml
android/: gradle.properties  settings.gradle.kts
android/kaya/: build.gradle.kts
android/milestone0/: build.gradle.kts
android/milestone0kt/: build.gradle.kts
android/milestone2/: build.gradle.kts
android/milestone2kt/: build.gradle.kts
bindings/: README.md
bindings/c/: kaya_wire.h
bindings/csharp/: Kaya.cs  KayaApp.cs  KayaGenAttribute.cs  KayaRecords.cs  KayaSums.cs  KayaWire.cs
bindings/go/: app.go  app_test.go  kaya_wire.go  records.go  runtime.go  sums.go
bindings/haskell/: KayaApp.hs  KayaRuntime.hs  KayaWire.hs
bindings/ocaml/: dune  kaya_app.ml  kaya_runtime.ml  kaya_wire.ml
bindings/ocaml/checks/: abort_check.ml  dune
bindings/ocaml/ppx/: dune  kaya_ppx.ml
bindings/python/: kaya.py  kaya_app.py  kaya_app_checks.py  kaya_wire.py  pyproject.toml
bindings/python/kaya/: __init__.py  runtime.py  wire.py
bindings/swift/: KayaApp.swift  KayaRecords.swift  KayaSums.swift  KayaWire.swift
cmd/kaya-gen/: main.go
crates/kaya/: Cargo.toml  build.rs  cbindgen.toml
crates/kaya-derive/: Cargo.toml
crates/kaya-derive/src/: lib.rs
crates/kaya/examples/: entry.c  entry.cs  entry.csproj  entry.go  entry.rs  feed.rs  gallery.c  gallery.cs  gallery.csproj  gallery.hs  gallery.ml  gallery.py  gallery.rs  milestone0.c  milestone0.cs  milestone0.go  milestone0.hs  milestone0.ml  milestone0.py  milestone0.rs  milestone0_android.rs  milestone0_ml_stubs.c  milestone2.c  milestone2.cs  milestone2.csproj  milestone2.go  milestone2.hs  milestone2.ml  milestone2.py  milestone2.rs  milestone2_android.rs  milestone2_hs_stubs.c  reorder.rs  todos.cs  todos.csproj  todos.hs  todos.ml  todos.rs
crates/kaya/include/: kaya.h
crates/kaya/src/: android.rs  app.rs  appkit.rs  capi.rs  gtk.rs  harness.rs  jvm.rs  lib.rs  protocol.rs  ring.rs  scene.rs  spec.rs  swiftui_host.rs  uikit.rs  wire.rs
crates/kaya/src/winui/: bindings.rs  mod.rs
docs/: HACKING.md  deferred.md  layout-survey.md  menus-plan.md  traps.md
guests/c/: Makefile  entry.c  feed.c  gallery.c  milestone2.c  reorder.c  todos.c
guests/csharp/: AbortCheck.cs  AlignScene.cs  ConfirmScene.cs  EncodeBench.cs  EntryScene.cs  FeedScene.cs  GalleryScene.cs  GridScene.cs  GrowScene.cs  ItemKaya.cs  LayoutScene.cs  Milestone2Scene.cs  NavScene.cs  PanelsScene.cs  PostKaya.cs  Program.cs  ProgressScene.cs  RadioScene.cs  ReorderScene.cs  ScrollScene.cs  SectionsScene.cs  SelectScene.cs  TextareaScene.cs  TodoKaya.cs  TodosScene.cs  WindowScene.cs  kaya-guests.csproj
guests/haskell/: AbortCheck.hs  align.hs  confirm.hs  encodebench.hs  entry.hs  feed.hs  gallery.hs  grid.hs  grow.hs  kaya-guests.cabal  layout.hs  milestone2.hs  nav.hs  panels.hs  progress.hs  radio.hs  reorder.hs  scroll.hs  sections.hs  select.hs  textarea.hs  todos.hs  window.hs
guests/ocaml/: align.ml  confirm.ml  dune  encodebench.ml  entry.ml  feed.ml  gallery.ml  grid.ml  grow.ml  layout.ml  milestone2.ml  nav.ml  panels.ml  progress.ml  radio.ml  reorder.ml  scroll.ml  sections.ml  select.ml  textarea.ml  todos.ml  window.ml
guests/python/: align.py  confirm.py  encode_bench.py  entry.py  feed.py  gallery.py  grid.py  grow.py  layout.py  milestone2.py  nav.py  panels.py  progress.py  pyproject.toml  radio.py  reorder.py  scroll.py  sections.py  select.py  textarea.py  todos.py  window.py
guests/rust/: align.rs  confirm.rs  entry.rs  feed.rs  gallery.rs  grid.rs  grow.rs  layout.rs  milestone2.rs  milestone2_android.rs  nav.rs  panels.rs  progress.rs  radio.rs  reorder.rs  scroll.rs  sections.rs  select.rs  textarea.rs  todos.rs  window.rs
guests/swift/: align.swift  confirm.swift  entry.swift  feed+Kaya.swift  feed.swift  gallery.swift  grid.swift  grow.swift  layout.swift  milestone2.swift  nav.swift  panels.swift  progress.swift  radio.swift  reorder+Kaya.swift  reorder.swift  scroll.swift  sections.swift  select.swift  textarea.swift  todos+Kaya.swift  todos.swift  window.swift
swift/: KayaSwiftUI.swift  KayaSwiftUIEntry.swift
tools/: bench-encode.sh  check-abort.sh  check-compose.sh  check-gtk.sh  check-mirror.sh  check-shell.sh  check-steps.sh  check-stubs.sh  check-sugar-surface.sh  check-targets.sh  check-verbs.sh  check-wheel.sh  deploy-win.sh  fetch-winappsdk.sh  gen-bindings.sh  gen-guests.sh  gen-header.sh  harness-extract.sh  java-typecheck.sh  probe-env.sh  swift-typecheck.sh  validate-all.sh  validate-linux.sh  validate-mac.sh
tools/android/: run-emulator.sh
tools/guest/: analyze-dump.cmd  crash-report.cmd  enable-dumps.cmd  hang-dump.cmd  minimal-resources.pri  probe.cmd  record.cmd  run-hidden.vbs  run_align_csharp.cmd  run_align_go.cmd  run_align_java.cmd  run_align_python.cmd  run_align_rust.cmd  run_confirm_csharp.cmd  run_confirm_go.cmd  run_confirm_java.cmd  run_confirm_python.cmd  run_confirm_rust.cmd  run_csharp.cmd  run_entry_csharp.cmd  run_entry_go.cmd  run_entry_java.cmd  run_entry_python.cmd  run_entry_rust.cmd  run_feed_csharp.cmd  run_feed_go.cmd  run_feed_java.cmd  run_feed_python.cmd  run_feed_rust.cmd  run_gallery_csharp.cmd  run_gallery_go.cmd  run_gallery_java.cmd  run_gallery_python.cmd  run_gallery_rust.cmd  run_go.cmd  run_grid_csharp.cmd  run_grid_go.cmd  run_grid_java.cmd  run_grid_python.cmd  run_grid_rust.cmd  (+69 more)
tools/ios/: Info.plist.in  entry.swift  gallery.swift  milestone0.swift  milestone2.swift  run-sim.sh  todos.swift
tools/kaya-bindgen/: Cargo.toml
tools/kaya-csgen/: Program.cs  kaya-csgen.csproj
tools/kaya-swift-gen/: Package.resolved  Package.swift
tools/lib/: swift-toolchain.sh
tools/linux/: Dockerfile  record-leg.sh  run-suites.sh
tools/record-suite/: main.swift
tools/scenes/: align.steps  confirm.steps  entry.steps  feed.steps  gallery.steps  grid.steps  grow.steps  layout.steps  milestone2.steps  nav.steps  panels.steps  progress.steps  radio.steps  reorder.steps  scroll.steps  sections.steps  select.steps  textarea.steps  (+2 more)
(+96 files in other folders)
