# The kaya Python binding as a real distribution. The code-level name
# is `kaya` everywhere (the package directory); the distribution name
# is kaya-gui because PyPI's `kaya` is squatted by an abandoned
# package — registries govern artifact names, never import names.
# The version mirrors the crates.io placeholder until a real release.
[project]
name = "kaya-gui"
version = "0.0.0"
description = "Cross-platform native UI: the Python guest binding"
requires-python = ">=3.10"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["kaya"]
