[package]
name = "kaya-derive"
version = "0.0.0"
edition = "2024"

[lib]
proc-macro = true

# Compile-time only, like paste before it: syn/quote are the universal
# derive substrate, and none of this reaches a runtime binary.
[dependencies]
proc-macro2 = "1"
quote = "1"
syn = { version = "2", features = ["full"] }
