[package]
name = "kaya"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Cross-platform GUI library that wraps each platform's native widgets"
repository = "https://github.com/smasher164/kaya"

[lib]
# staticlib is for iOS, where app bundles prefer static linking and the
# Swift validation leg links libkaya.a directly.
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]

[build-dependencies]
# Emits msvc linker directives at build time; no-op for other targets.
static_vcruntime = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.62"
windows-numerics = "0.3"
windows-collections = "0.3"
# TextBox's metadata reaches IAsyncOperation (windows-bindgen emits
# windows_future paths for it).
windows-future = "0.3"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"

[target.'cfg(target_os = "linux")'.dependencies]
gtk4 = "0.11.4"

[target.'cfg(target_os = "ios")'.dependencies]
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
libc = "0.2"
# stdout/stderr go nowhere in an Android app process; logging and panics
# route to logcat instead.
log = "0.4"
android_logger = "0.15"
log-panics = "2"

# Android has no native process entry (Zygote forks the process and an
# Activity is the way in), so the Android packaging of milestone 0 is a
# cdylib exporting the JNI entry rather than a bin.
[[example]]
name = "milestone2_android"
crate-type = ["cdylib"]
