[package]
name = "kaya"
version = "0.0.0"
edition = "2024"
license = "MIT"
description = "Cross-platform GUI library that wraps each platform's native widgets"
repository = "https://github.com/smasher164/kaya"

[lib]
# staticlib is for iOS, where app bundles prefer static linking and the
# Swift validation leg links libkaya.a directly.
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
# Compile-time only (proc-macro): #[derive(KayaGen)] — the type's shape
# is the schema.
kaya-derive = { path = "../kaya-derive" }

[build-dependencies]
# Emits msvc linker directives at build time; no-op for other targets.
static_vcruntime = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows-core = "0.62"
windows-numerics = "0.3"
windows-collections = "0.3"
# TextBox's metadata reaches IAsyncOperation (windows-bindgen emits
# windows_future paths for it).
windows-future = "0.3"
# The desktop JVM guest tier (jvm.rs): a plain JVM process loads the
# cdylib and speaks the same KayaRing natives as Android's JVM tier.
jni = "0.21"

[target.'cfg(target_os = "macos")'.dependencies]
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-app-kit = "0.3.2"
objc2-foundation = "0.3.2"
# The desktop JVM guest tier (jvm.rs): a plain JVM process loads the
# cdylib and speaks the same KayaRing natives as Android's JVM tier.
jni = "0.21"

[target.'cfg(target_os = "linux")'.dependencies]
# v4_6 gates gdk::Texture::from_bytes (decode-from-encoded-bytes, GDK
# 4.6+); the validation image ships GTK 4.18.
gtk4 = { version = "0.11.4", features = ["v4_6"] }
# The desktop JVM guest tier (jvm.rs): a plain JVM process loads the
# cdylib and speaks the same KayaRing natives as Android's JVM tier.
jni = "0.21"

[target.'cfg(target_os = "ios")'.dependencies]
dispatch2 = "0.3.1"
objc2 = "0.6.4"
objc2-core-foundation = "0.3.2"
objc2-foundation = "0.3.2"
objc2-ui-kit = "0.3.2"

[target.'cfg(target_os = "android")'.dependencies]
jni = "0.21"
libc = "0.2"
# stdout/stderr go nowhere in an Android app process; logging and panics
# route to logcat instead.
log = "0.4"
android_logger = "0.15"
log-panics = "2"

# The example scenes live inguests/rust, beside the other languages'
# guests; explicit paths keep `cargo build --example <scene>` and the
# target/…/examples output layout unchanged.
[[example]]
name = "milestone2"
path = "../../guests/rust/milestone2.rs"

[[example]]
name = "entry"
path = "../../guests/rust/entry.rs"

[[example]]
name = "gallery"
path = "../../guests/rust/gallery.rs"

[[example]]
name = "todos"
path = "../../guests/rust/todos.rs"

[[example]]
name = "reorder"
path = "../../guests/rust/reorder.rs"

[[example]]
name = "feed"
path = "../../guests/rust/feed.rs"

[[example]]
name = "layout"
path = "../../guests/rust/layout.rs"

[[example]]
name = "align"
path = "../../guests/rust/align.rs"

[[example]]
name = "window"
path = "../../guests/rust/window.rs"

[[example]]
name = "panels"
path = "../../guests/rust/panels.rs"

[[example]]
name = "grow"
path = "../../guests/rust/grow.rs"

# Android has no native process entry (Zygote forks the process and an
# Activity is the way in), so the Android packaging of milestone 0 is a
# cdylib exporting the JNI entry rather than a bin.
[[example]]
name = "milestone2_android"
path = "../../guests/rust/milestone2_android.rs"
crate-type = ["cdylib"]
