cabal-version: 2.4
-- The Haskell guests. The binding compiles once as an internal library
-- (sources still live in bindings/haskell — packaging it as its own
-- distribution is the packaging milestone); each scene is an
-- executable. libkaya's location comes from the invocation:
--   cabal build all --extra-lib-dirs=$ROOT/target/debug
name: kaya-guests
version: 0
build-type: Simple

common shared
  default-language: GHC2021
  build-depends: base, bytestring, containers
  ghc-options: -threaded -O

library
  import: shared
  exposed-modules: KayaApp, KayaRuntime, KayaWire
  hs-source-dirs: ../../bindings/haskell
  c-sources: ../../bindings/haskell/kaya_hs_stubs.c
  extra-libraries: kaya

executable milestone2
  import: shared
  main-is: milestone2.hs
  build-depends: kaya-guests

executable entry
  import: shared
  main-is: entry.hs
  build-depends: kaya-guests

executable gallery
  import: shared
  main-is: gallery.hs
  build-depends: kaya-guests

executable todos
  import: shared
  main-is: todos.hs
  build-depends: kaya-guests

executable reorder
  import: shared
  main-is: reorder.hs
  build-depends: kaya-guests

executable feed
  import: shared
  main-is: feed.hs
  build-depends: kaya-guests

executable grow
  import: shared
  main-is: grow.hs
  build-depends: kaya-guests

executable align
  import: shared
  main-is: align.hs
  build-depends: kaya-guests

executable window
  import: shared
  main-is: window.hs
  build-depends: kaya-guests

executable panels
  import: shared
  main-is: panels.hs
  build-depends: kaya-guests

executable confirm
  import: shared
  main-is: confirm.hs
  build-depends: kaya-guests

executable nav
  import: shared
  main-is: nav.hs
  build-depends: kaya-guests

executable scroll
  import: shared
  main-is: scroll.hs
  build-depends: kaya-guests

executable progress
  import: shared
  main-is: progress.hs
  build-depends: kaya-guests

executable layout
  import: shared
  main-is: layout.hs
  build-depends: kaya-guests

executable encodebench
  import: shared
  main-is: encodebench.hs
  build-depends: kaya-guests, time

-- Not a scene: the headless abort check (uniform abort semantics).
executable kaya-abort-check
  import: shared
  main-is: AbortCheck.hs
  build-depends: kaya-guests
