(executables
 (names milestone2 entry gallery todos reorder feed grow layout align window panels confirm nav scroll progress select encodebench)
 (modules milestone2 entry gallery todos reorder feed grow layout align window panels confirm nav scroll progress select encodebench)
 (libraries kaya_guest_binding unix)
 (preprocess
  (pps kaya_ppx)))
